force-app/main/default/objects/User_Permissions_Snapshot__c/User_Permissions_Snapshot__c.object-meta.xml
<CustomObject>
    <label>User Permissions Snapshot</label>
    <nameField>
        <label>User Permissions Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Permissions Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>