force-app/main/default/objects/User_Permissions_Snapshot__c/fields/Create_Access__c.field-meta.xml
<CustomField>
    <fullName>Create_Access__c</fullName>
    <label>Create Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>