force-app/main/default/objects/User_Permissions_Snapshot__c/fields/Modify_All_Access__c.field-meta.xml
<CustomField>
    <fullName>Modify_All_Access__c</fullName>
    <label>Modify All Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>