force-app/main/default/objects/User_Permissions_Snapshot__c/fields/Read_Access__c.field-meta.xml
<CustomField>
    <fullName>Read_Access__c</fullName>
    <label>Read Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>