force-app/main/default/objects/User_Permissions_Snapshot__c/fields/System_Permissions__c.field-meta.xml
<CustomField>
    <fullName>System_Permissions__c</fullName>
    <label>System Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modify All Data</fullName>
            </value>
            <value>
                <fullName>Show App Launcher in Communities</fullName>
            </value>
            <value>
                <fullName>Manage Public Classic Email Templates</fullName>
            </value>
            <value>
                <fullName>Run Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>