force-app/main/default/objects/User_Permissions_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Read_Access__c</columns>
    <columns>Create_Access__c</columns>
    <columns>Edit_Access__c</columns>
    <columns>Delete_Access__c</columns>
    <columns>View_All_Access__c</columns>
    <columns>Modify_All_Access__c</columns>
    <columns>System_Permissions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>